--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-11">
-                <div class="carousel slide" id="sVgT44hbfk" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sVgVamrt8x" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVgT44hbfk" data-bs-target="#sVgT44hbfk"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVgT44hbfk" data-bs-target="#sVgT44hbfk"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVgT44hbfk" data-bs-target="#sVgT44hbfk"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVgVamrt8x" data-bs-target="#sVgVamrt8x"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVgVamrt8x" data-bs-target="#sVgVamrt8x"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVgVamrt8x" data-bs-target="#sVgVamrt8x"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -124,11 +124,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVgT44hbfk">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVgVamrt8x">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVgT44hbfk">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVgVamrt8x">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -145,12 +145,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10">
-                <div class="carousel slide" id="sVgT4fLhFl" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sVgVawv6sX" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVgT4fLhFl" data-bs-target="#sVgT4fLhFl"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVgT4fLhFl" data-bs-target="#sVgT4fLhFl"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVgT4fLhFl" data-bs-target="#sVgT4fLhFl"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVgVawv6sX" data-bs-target="#sVgVawv6sX"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVgVawv6sX" data-bs-target="#sVgVawv6sX"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVgVawv6sX" data-bs-target="#sVgVawv6sX"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -190,11 +190,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVgT4fLhFl">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVgVawv6sX">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVgT4fLhFl">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVgVawv6sX">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -311,7 +311,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VZO51EwDHMS1zlc73CgD0vu7y1vQnOTckLp65dZAablGXDYEIC6RN12pJRA5JTG5baoPnWa9dE3ZO7SYbMF0eFevd1MSV8+lZjRQF0cUAHdKXjKCurNsSYRcTPRGauU=">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yz347iOV20urj1Db0J0+tTzF7070vbHaRId0WaDEa7qAWlT8G7k6OooLlFN9KbfQ7cxEOoP8XESS1Cc4PRUeIh5DnB+dWhgGXZpSeRBxmRd2g1M60d//1IsqtEdrvpty">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
