--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-11">
-                <div class="carousel slide" id="sVgY6MO0jb" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="sVh0GQxxXi" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVgY6MO0jb" data-bs-target="#sVgY6MO0jb"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVgY6MO0jb" data-bs-target="#sVgY6MO0jb"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVgY6MO0jb" data-bs-target="#sVgY6MO0jb"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVh0GQxxXi" data-bs-target="#sVh0GQxxXi"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVh0GQxxXi" data-bs-target="#sVh0GQxxXi"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVh0GQxxXi" data-bs-target="#sVh0GQxxXi"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -128,11 +128,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVgY6MO0jb">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVh0GQxxXi">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVgY6MO0jb">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVh0GQxxXi">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -149,12 +149,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10">
-                <div class="carousel slide" id="sVgY6VBOia" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="sVh0GY5j08" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVgY6VBOia" data-bs-target="#sVgY6VBOia"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVgY6VBOia" data-bs-target="#sVgY6VBOia"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVgY6VBOia" data-bs-target="#sVgY6VBOia"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVh0GY5j08" data-bs-target="#sVh0GY5j08"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVh0GY5j08" data-bs-target="#sVh0GY5j08"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVh0GY5j08" data-bs-target="#sVh0GY5j08"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -194,11 +194,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVgY6VBOia">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVh0GY5j08">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVgY6VBOia">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVh0GY5j08">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -315,7 +315,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="xvvVAr4beT8gZoVZX5cBTsZwvxBRftpAzxRgYPm4NTIc7Nj7CiSJs04vH9IpJuxcwZjeUDLmykjVcW5jI+NONMH7obpeFB7DUjGZ5unIoavi5o4/MlMn6zUmVC3+I7G4">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sdd00H57r2x/AzFixLbNLE5EsMW07lCWp4mcEqXMLmu1wo8dX6vmGz3Ju+DMmIW7XkUctkjSwyBq3Vm0Kw7+HDVYnTs9/IQ8DJActsO8A1Tqmk2k+DJ6Cqiyf7P9gyTH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
