--- a/index.html
+++ b/index.html
@@ -76,38 +76,13 @@
     </nav>
 </section>
 
-<section data-bs-version="5.1" class="cid-PxfawMwRrF mwHidden" id="design-block-PxfawMwRrF">
-  <!--
-    ███╗   ███╗ ██████╗ ██████╗ ██╗██╗    ██╗██╗███████╗███████╗
-    ████╗ ████║██╔═══██╗██╔══██╗██║██║    ██║██║██╔════╝██╔════╝
-    ██╔████╔██║██║   ██║██████╔╝██║██║ █╗ ██║██║███████╗█████╗  
-    ██║╚██╔╝██║██║   ██║██╔══██╗██║██║███╗██║██║╚════██║██╔══╝  
-    ██║ ╚═╝ ██║╚██████╔╝██████╔╝██║╚███╔███╔╝██║███████║███████╗
-    ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚═╝ ╚══╝╚══╝ ╚═╝╚══════╝╚══════╝
-    MobiWise Block. If you like it, don't forget to buy me a coffee.
-    https://www.buymeacoffee.com/MobiWise
-    version: 0.4
-    date: 2022.01.22GMT20:23
-    -->
-  
-  
-  <div class="mwContainer">
-    <a href="https://www.buymeacoffee.com/MobiWise" target="_blank">
-      <div class="mwMarquee">
-        <h1 class="mbr-section-title mb-4 color-text display-1">MOBIWISE • Cool Stuff For Mobirise !</h1>
-      </div>
-    </a>
-  </div>
-  <!-- End of MobiWise Block -->
-</section>
-
 <section data-bs-version="5.1" class="slider1 cid-ugO3Wku0Ne" id="design-block-ugO3Wku0Ne">
     
-    <div class="carousel slide" id="sWj8VebPwZ" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+    <div class="carousel slide" id="sWjahnUyPZ" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sWj8VebPwZ" data-bs-target="#sWj8VebPwZ"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#sWj8VebPwZ" data-bs-target="#sWj8VebPwZ"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#sWj8VebPwZ" data-bs-target="#sWj8VebPwZ"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sWj8VebPwZ" data-bs-target="#sWj8VebPwZ"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sWjahnUyPZ" data-bs-target="#sWjahnUyPZ"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#sWjahnUyPZ" data-bs-target="#sWjahnUyPZ"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#sWjahnUyPZ" data-bs-target="#sWjahnUyPZ"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sWjahnUyPZ" data-bs-target="#sWjahnUyPZ"></li>
         </ol>
         <div class="carousel-inner">
             
@@ -158,15 +133,40 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sWj8VebPwZ">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sWjahnUyPZ">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sWj8VebPwZ">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sWjahnUyPZ">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
     </div>
+</section>
+
+<section data-bs-version="5.1" class="cid-PxfawMwRrF mwHidden" id="design-block-PxfawMwRrF">
+  <!--
+    ███╗   ███╗ ██████╗ ██████╗ ██╗██╗    ██╗██╗███████╗███████╗
+    ████╗ ████║██╔═══██╗██╔══██╗██║██║    ██║██║██╔════╝██╔════╝
+    ██╔████╔██║██║   ██║██████╔╝██║██║ █╗ ██║██║███████╗█████╗  
+    ██║╚██╔╝██║██║   ██║██╔══██╗██║██║███╗██║██║╚════██║██╔══╝  
+    ██║ ╚═╝ ██║╚██████╔╝██████╔╝██║╚███╔███╔╝██║███████║███████╗
+    ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚═╝ ╚══╝╚══╝ ╚═╝╚══════╝╚══════╝
+    MobiWise Block. If you like it, don't forget to buy me a coffee.
+    https://www.buymeacoffee.com/MobiWise
+    version: 0.4
+    date: 2022.01.22GMT20:23
+    -->
+  
+  
+  <div class="mwContainer">
+    <a href="https://www.buymeacoffee.com/MobiWise" target="_blank">
+      <div class="mwMarquee">
+        <h1 class="mbr-section-title mb-4 color-text display-1">MOBIWISE • Cool Stuff For Mobirise !</h1>
+      </div>
+    </a>
+  </div>
+  <!-- End of MobiWise Block -->
 </section>
 
 <section data-bs-version="5.1" class="slider5 mbr-embla cid-sVgRQAv9WD" id="slider5-n">
@@ -276,7 +276,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1LS8ejbXjNxMXzc2ll/a7jwvWPErU6Lj5Wp9x2QQ6i+pT974k0YS8zVDkVKLLHMtRu/OxjqfQCu3fwdFzkYz9yXaOsqkvffSC24YeGxwSOwJrsBqWkMWbzSLfWk5u09j">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HR961c59l9MJim7BoUIqEyED37DxbPp7uw/zF22u8GN3735AsgKgsD7iciaJ4aoU6lzQ+0sLiP488evBzw2/kUVo1TRvW5AMR/o9LjoTFJVoOw6WFGLl3yFFPkgShMEJ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
