--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/parallax/jarallax.css">
   <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
@@ -78,11 +79,11 @@
 
 <section data-bs-version="5.1" class="slider1 cid-ugO3Wku0Ne" id="design-block-ugO3Wku0Ne">
     
-    <div class="carousel slide" id="sWjahnUyPZ" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+    <div class="carousel slide" id="sWjd8p6cXP" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sWjahnUyPZ" data-bs-target="#sWjahnUyPZ"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#sWjahnUyPZ" data-bs-target="#sWjahnUyPZ"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#sWjahnUyPZ" data-bs-target="#sWjahnUyPZ"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sWjahnUyPZ" data-bs-target="#sWjahnUyPZ"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sWjd8p6cXP" data-bs-target="#sWjd8p6cXP"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#sWjd8p6cXP" data-bs-target="#sWjd8p6cXP"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#sWjd8p6cXP" data-bs-target="#sWjd8p6cXP"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sWjd8p6cXP" data-bs-target="#sWjd8p6cXP"></li>
         </ol>
         <div class="carousel-inner">
             
@@ -133,18 +134,18 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sWjahnUyPZ">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sWjd8p6cXP">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sWjahnUyPZ">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sWjd8p6cXP">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
     </div>
 </section>
 
-<section data-bs-version="5.1" class="cid-PxfawMwRrF mwHidden" id="design-block-PxfawMwRrF">
+<section data-bs-version="5.1" class="cid-PxfawMwRrF mbr-parallax-background mwHidden" id="design-block-PxfawMwRrF">
   <!--
     ███╗   ███╗ ██████╗ ██████╗ ██╗██╗    ██╗██╗███████╗███████╗
     ████╗ ████║██╔═══██╗██╔══██╗██║██║    ██║██║██╔════╝██╔════╝
@@ -276,7 +277,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HR961c59l9MJim7BoUIqEyED37DxbPp7uw/zF22u8GN3735AsgKgsD7iciaJ4aoU6lzQ+0sLiP488evBzw2/kUVo1TRvW5AMR/o9LjoTFJVoOw6WFGLl3yFFPkgShMEJ">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Ku+0ifo+XAxF/ti3WUvZUe0sGyvv0Cw5ykteECnJ3uFap/OxxJJ5L7nx/Jpnxmp1UFiHKm0CBSbWrbrxD4AQ5/LwVX2UrwMsAqkzqLE7aA31hXlPjHBvAP7r2ujCPYyq">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
@@ -317,7 +318,7 @@
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
