--- a/page1.html
+++ b/page1.html
@@ -109,8 +109,8 @@
         
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sXmEyRzneE-modal" data-bs-target="#sXmEyRzneE-modal">
-                    <img class="w-100" src="assets/images/flower-2001-515x412.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-sXmEyRzneE" data-bs-target="#lb-sXmEyRzneE">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sXmF637Dcb-modal" data-bs-target="#sXmF637Dcb-modal">
+                    <img class="w-100" src="assets/images/flower-2001-515x412.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-sXmF637Dcb" data-bs-target="#lb-sXmF637Dcb">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -119,8 +119,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sXmEyRzneE-modal" data-bs-target="#sXmEyRzneE-modal">
-                    <img class="w-100" src="assets/images/flower-2031-515x412.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sXmEyRzneE" data-bs-target="#lb-sXmEyRzneE">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sXmF637Dcb-modal" data-bs-target="#sXmF637Dcb-modal">
+                    <img class="w-100" src="assets/images/flower-2031-515x412.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sXmF637Dcb" data-bs-target="#lb-sXmF637Dcb">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -128,8 +128,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sXmEyRzneE-modal" data-bs-target="#sXmEyRzneE-modal">
-                    <img class="w-100" src="assets/images/flower-2014-515x412.jpg" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sXmEyRzneE" data-bs-target="#lb-sXmEyRzneE">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sXmF637Dcb-modal" data-bs-target="#sXmF637Dcb-modal">
+                    <img class="w-100" src="assets/images/flower-2014-515x412.jpg" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sXmF637Dcb" data-bs-target="#lb-sXmF637Dcb">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -137,8 +137,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sXmEyRzneE-modal" data-bs-target="#sXmEyRzneE-modal">
-                    <img class="w-100" src="assets/images/flower-2018-515x412.jpg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sXmEyRzneE" data-bs-target="#lb-sXmEyRzneE">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sXmF637Dcb-modal" data-bs-target="#sXmF637Dcb-modal">
+                    <img class="w-100" src="assets/images/flower-2018-515x412.jpg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sXmF637Dcb" data-bs-target="#lb-sXmF637Dcb">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -147,11 +147,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sXmEyRzneE-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sXmF637Dcb-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-sXmEyRzneE" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-sXmF637Dcb" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/flower-2001-515x412.jpg" alt="">
@@ -167,18 +167,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-sXmEyRzneE" data-bs-target="#lb-sXmEyRzneE"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sXmEyRzneE" data-bs-target="#lb-sXmEyRzneE"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sXmEyRzneE" data-bs-target="#lb-sXmEyRzneE"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sXmEyRzneE" data-bs-target="#lb-sXmEyRzneE"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-sXmF637Dcb" data-bs-target="#lb-sXmF637Dcb"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sXmF637Dcb" data-bs-target="#lb-sXmF637Dcb"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sXmF637Dcb" data-bs-target="#lb-sXmF637Dcb"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sXmF637Dcb" data-bs-target="#lb-sXmF637Dcb"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-sXmEyRzneE">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-sXmF637Dcb">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-sXmEyRzneE">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-sXmF637Dcb">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
